--- a/README.adoc
+++ b/README.adoc
@@ -71,10 +71,10 @@ Problem: The command terminates with an error message similar to
 could not open port /dev/ttyUSB0: [Errno 13] Permission denied: '/dev/ttyUSB0'
 ```
 
-The cause is most likely that the user in the container lacks permission to use the USB device. The solution is then to permit the container user to access the device. To add the user to the device's group, add `--group-add "$(stat --format=%g /dev/ttyUSB0)"` to the docker arguments. Full Example:
+The cause is most likely that the user in the container lacks permission to use the USB device. The solution is then to permit the container user to access the device. To add the user to the device's group, add `--group-add "$(stat -c %g /dev/ttyUSB0)"` to the docker arguments. Full Example:
 
 ```sh
-$ docker run --rm --device /dev/ttyUSB0:/dev/ttyUSB0 --group-add "$(stat --format=%g /dev/ttyUSB0)" -e FIRMWARE_URL=https://github.com/Koenkk/Z-Stack-firmware/raw/master/coordinator/Z-Stack_3.x.0/bin/CC1352P2_CC2652P_launchpad_coordinator_20230507.zip ckware/ti-cc-tool -ewv -p /dev/ttyUSB0 --bootloader-sonoff-usb
+$ docker run --rm --device /dev/ttyUSB0:/dev/ttyUSB0 --group-add "$(stat -c %g /dev/ttyUSB0)" -e FIRMWARE_URL=https://github.com/Koenkk/Z-Stack-firmware/raw/master/coordinator/Z-Stack_3.x.0/bin/CC1352P2_CC2652P_launchpad_coordinator_20230507.zip ckware/ti-cc-tool -ewv -p /dev/ttyUSB0 --bootloader-sonoff-usb
 ```
 
 == References
